--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         }
 
         .card {
+            will-change: transform;
             z-index: 2;
             display: flex;
             justify-content: center;
@@ -58,8 +59,6 @@
             text-align: center;
             background: whitesmoke;
             width: var(--card-width);
-            /* border-radius: 10px; */
-
             transition: transform 1s;
             transform-style: preserve-3d;
             backface-visibility: hidden;
@@ -70,10 +69,10 @@
         }
 
         .card-back {
+            will-change: transform;
             background: whitesmoke;
             position: absolute;
             top: 0;
-            /* visibility: hidden; */
             width: var(--card-width);
             height: 100%;
             transition: transform 1s;
@@ -110,7 +109,7 @@
                 <h2 id="cardTask"></h2>
             </div>
             <div class="card-back" id="card-back">
-                <h2>This is the back of the card</h2>
+                <h2>This is the back of the card. We did it</h2>
             </div>
         </div>
 
