js clean up and card description

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             color: #202020;
         }
 
+        p{
+            font-size: 18px;
+        }
+
         img {
             width: calc(var(--card-width) / 2);
             height: calc(var(--card-height) / 1.5);
@@ -109,7 +113,7 @@
                 <h2 id="cardTask"></h2>
             </div>
             <div class="card-back" id="card-back">
-                <h2>This is the back of the card. We did it</h2>
+                <p id="cardDescription"></p>
             </div>
         </div>
 
