--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <style>
         :root {
-            --card-width: 400px;
-            --card-height: 250px;
+            --card-width: 500px;
+            --card-height: 300px;
         }
 
         body {
@@ -34,7 +34,7 @@
             color: #202020;
         }
 
-        p{
+        p {
             font-size: 18px;
         }
 
@@ -44,25 +44,30 @@
         }
 
         .card-container {
-            border: 5px solid yellow;
+            /* border: 5px solid yellowgreen; */
             position: relative;
-            perspective: 40em
+            perspective: 40em;
+            height: var(--card-height);
+            text-align: center;
         }
 
         .card-container:hover {
             cursor: pointer;
         }
 
-        .card {
+        .card,
+        .card-back {
             will-change: transform;
-            z-index: 2;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            align-items: center;
-            text-align: center;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px 0 black;
+            /* z-index: 2; */
+            /* display: flex; */
+            /* justify-content: center; */
+            /* flex-wrap: wrap; */
+            /* align-items: center; */
             background: whitesmoke;
             width: var(--card-width);
+            height: 100%;
             transition: transform 1s;
             transform-style: preserve-3d;
             backface-visibility: hidden;
@@ -73,20 +78,23 @@
         }
 
         .card-back {
-            will-change: transform;
-            background: whitesmoke;
+            display: flex;
+            flex-flow: column;
             position: absolute;
             top: 0;
-            width: var(--card-width);
-            height: 100%;
-            transition: transform 1s;
-            transform-style: preserve-3d;
-            backface-visibility: hidden;
             transform: rotateY(180deg);
         }
 
         .card-back-flip {
             transform: rotateY(360deg);
+        }
+
+        .card-quote {
+            background-color: darkblue;
+            border-radius: 0px 0px 10px 10px;
+            color: whitesmoke;
+            flex-grow: 1;
+            height: 100%;
         }
 
         @media only screen and (max-width: 800px) {
@@ -107,17 +115,20 @@
 
     <main>
 
-        <div class="card-container" id="card-container">
+        <div class="card-container" id="cardContainer">
             <div class="card" id="card">
                 <img id="cardImage">
                 <h2 id="cardTask"></h2>
             </div>
-            <div class="card-back" id="card-back">
+            <div class="card-back" id="cardBack">
                 <p id="cardDescription"></p>
+                <div class="card-quote">
+                    <p id="cardQuote"></p>
+                </div>
             </div>
         </div>
-
     </main>
+
 </body>
 
 </html>
