--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         }
 
         .card,
-        .card-back {
+        .card-back,
+        .card-quote {
             will-change: transform;
             border-radius: 10px;
             box-shadow: 0 4px 8px 0 black;
