--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         body {
             font-family: 'Open Sans', Arial, Helvetica, sans-serif;
             background-color: #202020;
+            /* background-color: #eeeeee; */
             color: azure;
         }
 
@@ -66,7 +67,7 @@
             /* justify-content: center; */
             /* flex-wrap: wrap; */
             /* align-items: center; */
-            background: whitesmoke;
+            background: #eeeeee;
             width: var(--card-width);
             height: 100%;
             transition: transform 1s;
@@ -93,7 +94,7 @@
         .card-quote {
             background-color: darkblue;
             border-radius: 0px 0px 10px 10px;
-            color: whitesmoke;
+            color: #eeeeee;
             flex-grow: 1;
             height: 100%;
         }
