--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="script.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Daily Stoic</title>
 
     <style>
         :root {
             --card-color: #394a7c;
+            --white: #eeeeee;
+            --black: #202020;
             --card-width: 500px;
             --card-height: 300px;
         }
 
         body {
             font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-            background-color: #202020;
+            background-color: var(--black);
             /* background-color: #eeeeee; */
-            color: azure;
+            color: var(--white);
         }
 
         header {
@@ -33,20 +36,37 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            color: #202020;
+            color: var(--black);
         }
 
         p {
             font-size: 18px;
         }
 
-        img {
-            width: calc(var(--card-width) / 2);
-            height: calc(var(--card-height) / 2);
+        img,
+        .material-icons {
+            /* width: calc(var(--card-width) / 3); */
+            border: 1px solid var(--white);
+            border-radius: 100px;
+            background-color: var(--white);
+            margin: 0px;
+            font-size: 128px;
+            /* height: calc(var(--card-height) / 2); */
+            color: var(--card-color);
+        }
+
+        .card-image-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            align-content: space-between;
+            border-radius: 10px 10px 0px 0px;
+
+            background-color: var(--card-color);
+            height: calc(var(--card-height) / 1.9);
         }
 
         .card-container {
-            /* border: 5px solid yellowgreen; */
             position: relative;
             perspective: 40em;
             height: var(--card-height);
@@ -60,19 +80,19 @@
         .card,
         .card-back {
             will-change: transform;
-            border-radius: 10px;
+            border-radius: 15px;
             box-shadow: 0 4px 8px 0 black;
             z-index: 2;
-            /* display: flex; */
-            /* justify-content: center; */
-            /* flex-wrap: wrap; */
-            /* align-items: center; */
-            background: #eeeeee;
+            background: var(--white);
             width: var(--card-width);
             height: 100%;
             transition: transform 1s;
             transform-style: preserve-3d;
             backface-visibility: hidden;
+        }
+
+        #cardTask {
+            margin-top: 2em;
         }
 
         .card-flip {
@@ -97,7 +117,7 @@
         .card-quote {
             background-color: var(--card-color);
             border-radius: 0px 0px 10px 10px;
-            color: #eeeeee;
+            color: var(--white);
             flex-grow: 1;
             height: 100%;
         }
@@ -122,9 +142,12 @@
 
         <div class="card-container" id="cardContainer">
             <div class="card" id="card">
-                <img id="cardImage">
+                <div class="card-image-container">
+                    <i class="material-icons" id="cardImage"></i>
+                </div>
                 <h2 id="cardTask"></h2>
             </div>
+
             <div class="card-back" id="cardBack">
                 <p id="cardDescription"></p>
                 <div class="card-quote">
@@ -135,4 +158,5 @@
     </main>
 
 </body>
+
 </html>
