Card previews and naming clean up

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             cursor: pointer;
         }
 
-        .card,
+        .card-front,
         .card-back {
             display: flex;
             flex-direction: column;
@@ -94,7 +94,7 @@
             backface-visibility: hidden;
         }
 
-        .card-flip {
+        .card-front-flip {
             transform: rotateY(180deg);
         }
 
@@ -121,12 +121,12 @@
             padding: 1em;
         }
 
-        .card-description{
+        .card-description {
             height: 50%;
             padding: 1em;
         }
 
-        #cardTask{
+        #cardTask {
             padding: 1em;
         }
 
@@ -149,7 +149,7 @@
     <main>
 
         <div class="card-container" id="cardContainer">
-            <div class="card" id="card">
+            <div class="card-front" id="cardFront">
                 <div class="card-icon-container">
                     <i class="material-icons" id="cardIcon"></i>
                 </div>
