Card previews and loading on click

--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
             padding: 1em;
         }
 
+        #previewList{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+        }
+
+        #previewList i:hover{
+            cursor: pointer;
+        }
+
         @media only screen and (max-width: 800px) {
             :root {
                 --card-width: 350px;
@@ -163,7 +173,13 @@
                 </div>
             </div>
         </div>
+
+        
     </main>
+
+    <div id="previewList">
+
+    </div>
 
 </body>
 
