--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="script.js"></script>
+    <script defer src="js/script.js"></script>
+    <script defer src="js/card-data.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="shortcut icon" href="favicon.svg" type="image/svg">
+    <link rel="shortcut icon" href="images/favicon.svg" type="image/svg">
     <link rel="stylesheet" href="style.css">
     <title>Daily Stoic</title>
 </head>
