--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <!-- TODO -->
 <!--
-    - Add close button to modal
-    - Reset Cards on close
     - Fix icon container height
+    - Fix esc for modal
 -->
 
 <head>
@@ -14,7 +13,7 @@
     <script defer src="js/script.js"></script>
     <script defer src="js/card-data.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="shortcut icon" href="images/favicon.svg" type="image/svg">
+    <link rel="shortcut icon" href="images/marcus-aurelius.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <title>Daily Stoic</title>
 </head>
@@ -34,6 +33,7 @@
                     <div class="card-icon-container">
                         <i class="material-icons" id="cardIcon"></i>
                     </div>
+                    
                     <h2 id="cardTask"></h2>
                 </div>
 
