--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <h1>Daily Stoic</h1>
-    </header>
+    </header> -->
 
     <h1>Select a challenge card from the list below</h1>
 
